[tool.poetry]
name = "notes"
version = "0.1.0"
description = "api for notes app"
authors = ["rubbie kelvin voltsman <rubbiekelvinvoltsman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "<4"
graphene-django = "^2.15.0"
django-graphql-jwt = "^0.3.4"
psycopg2-binary = "^2.9.3"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
